--- a/src/components/head/head.ejs
+++ b/src/components/head/head.ejs
@@ -1,186 +1,148 @@
 <div class="head">
     <div class="header-bar">
-            <span class="current-city">北京</span>
-            <a class="change-city" href="http://www.meituan.com/changecity/">切换城市</a>
-            <div class="near-citys">[
-                <a class="city-guess" href="http://dachangzizhixian.meituan.com">大厂回族自治县</a>
-                <a class="city-guess" href="http://lf.meituan.com">廊坊</a>
-                <a class="city-guess" href="http://sanhe.meituan.com">三河</a>]
-            </div>
-        
-            <nav class="header-bar-nav">
-                <ul class="header-nav-first">
-                    <li class="has-child">
-                        <a rel="nofollow" href="http://www.meituan.com/account/userinfo/" target="_blank">我的美团</a>
-                        <ul class="header-nav-my header-nav-second" style="display: none;">
-                            <a rel="nofollow" href="http://www.meituan.com/account/userinfo/" target="_blank"></a>
-                            <li>
-                                <a rel="nofollow" href="http://www.meituan.com/account/userinfo/" target="_blank"></a>
-                                <a rel="nofollow" href="http://www.meituan.com/orders/" target="_blank">我的订单</a>
-                            </li>
-                            <li>
-                                <a rel="nofollow" href="http://www.meituan.com/rates/" target="_blank">我的评价</a>
-                            </li>
-                            <li>
-                                <a rel="nofollow" href="http://www.meituan.com/collections/" target="_blank">我的收藏</a>
-                            </li>
-                            <li>
-                                <a rel="nofollow" href="http://www.meituan.com/vouchers/" target="_blank">抵用券</a>
-                            </li>
-                            <li>
-                                <a rel="nofollow" href="http://www.meituan.com/account/settings" target="_blank">账户设置</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="http://i.meituan.com/mobile/down/meituan" target="_blank">手机APP</a>
-                    </li>
-                    <li class="has-child">商家中心
-                        <ul class="header-nav-merchant header-nav-second" style="display: none;">
-                            <li>
-                                <a rel="nofollow" href="http://e.meituan.com/" target="_blank">登录商家中心</a>
-                            </li>
-                            <li>
-                                <a rel="nofollow" href="https://ecom.meituan.com/bizsettle/settle/merchantsSettle?utm_source=mt_C_my"
-                                    target="_blank">我想合作</a>
-                            </li>
-                            <li>
-                                <a rel="nofollow" href="http://e.meituan.com/mobile/" target="_blank">手机免费开店</a>
-                            </li>
-                            <li>
-                                <a rel="nofollow" href="https://daili.meituan.com/?comeFrom=mtwebMenu" target="_blank">餐饮代理商招募</a>
-                            </li>
-                            <li>
-                                <a href="http://pc.meituan.com?activity_code=mtpcdh" target="_blank">商家申请开票</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="has-child">网站导航
-                        <div class="header-nav-site header-nav-second" style="display: none;">
-                            <dl class="header-jiulv header-nav-third">
-                                <dt>酒店旅游</dt>
-                                <dd>
-                                    <a href="http://www.meituan.com/iflight/" target="_blank">国际机票</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://www.meituan.com/train/" target="_blank">火车票</a>
-                                </dd>
-                                <dd>
-                                    <a href="https://www.zhenguo.com/" target="_blank">榛果民宿</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://hotel.meituan.com/beijing/c20036/" target="_blank">经济型酒店</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://hotel.meituan.com/beijing/c20037/" target="_blank">主题酒店</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://hotel.meituan.com/beijing/c20038/" target="_blank">商务酒店</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://hotel.meituan.com/beijing/c20039/" target="_blank">公寓</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://hotel.meituan.com/beijing/c20040/" target="_blank">豪华酒店</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://hotel.meituan.com/beijing/c20041/" target="_blank">客栈</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://hotel.meituan.com/beijing/c20042/" target="_blank">青年旅社</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://hotel.meituan.com/beijing/c20043/" target="_blank">度假酒店</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://hotel.meituan.com/beijing/c20044/" target="_blank">别墅</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://hotel.meituan.com/beijing/c20045/" target="_blank">农家院</a>
-                                </dd>
-                            </dl>
-                            <dl class="header-meishi header-nav-third">
-                                <dt>吃美食</dt>
-                                <dd>
-                                    <a href="http://bj.meituan.com/meishi/c20004/" target="_blank">烤鱼</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://bj.meituan.com/meishi/c36/" target="_blank">特色小吃</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://bj.meituan.com/meishi/c54/" target="_blank">烧烤</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://bj.meituan.com/meishi/c40/" target="_blank">自助餐</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://bj.meituan.com/meishi/c17/" target="_blank">火锅</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://bj.meituan.com/meishi/c393/" target="_blank">代金券</a>
-                                </dd>
-                            </dl>
-                            <dl class="header-movie header-nav-third">
-                                <dt>看电影</dt>
-                                <dd>
-                                    <a href="http://maoyan.com/films" target="_blank">热映电影</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://maoyan.com/cinemas" target="_blank">热门影院</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://maoyan.com/board" target="_blank">热映电影口碑榜</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://maoyan.com/board/6" target="_blank">最受期待电影</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://maoyan.com/board/1" target="_blank">国内票房榜</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://maoyan.com/board/2" target="_blank">北美票房榜</a>
-                                </dd>
-                                <dd>
-                                    <a href="http://maoyan.com/board/4" target="_blank">电影排行榜</a>
-                                </dd>
-                            </dl>
-                            <dl class="header-app header-nav-third">
-                                <dt>手机应用</dt>
-                                <dd>
-                                    <a href="http://i.meituan.com/mobile/down/meituan" target="_blank">
-                                        <img class="appicon" src="//s0.meituan.net/bs/fe-web-meituan/404d350/img/appicons/meituan.png"
-                                            title="美团app" alt="美团app">
-                                    </a>
-                                </dd>
-                                <dd>
-                                    <a href="http://waimai.meituan.com/mobile/download/default" target="_blank">
-                                        <img class="appicon" src="//s1.meituan.net/bs/fe-web-meituan/404d350/img/appicons/waimai.png"
-                                            title="外卖app" alt="外卖app">
-                                    </a>
-                                </dd>
-                                <dd>
-                                    <a href="https://www.zhenguo.com/app/" target="_blank">
-                                        <img class="appicon" src="//s0.meituan.net/bs/fe-web-meituan/404d350/img/appicons/zhenguo.png"
-                                            title="榛果app" alt="榛果app">
-                                    </a>
-                                </dd>
-                                <dd>
-                                    <a href="http://www.dianping.com/events/m/index.htm" target="_blank">
-                                        <img class="appicon" src="//s1.meituan.net/bs/fe-web-meituan/404d350/img/appicons/dianping.png"
-                                            title="点评app" alt="点评app">
-                                    </a>
-                                </dd>
-                                <dd>
-                                    <a href="http://maoyan.com/app" target="_blank">
-                                        <img class="appicon" src="//s1.meituan.net/bs/fe-web-meituan/404d350/img/appicons/maoyan.png"
-                                            title="猫眼app" alt="猫眼app">
-                                    </a>
-                                </dd>
-                            </dl>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
+        <span class="icon-map"></span>
+        <span class="current-city">北京</span>
+        <a class="change-city" href="http://www.meituan.com/changecity/">切换城市2</a>
+        <div class="near-citys">[
+            <a class="city-guess" href="http://dachangzizhixian.meituan.com">大厂回族自治县</a>
+            <a class="city-guess" href="http://lf.meituan.com">廊坊</a>
+            <a class="city-guess" href="http://sanhe.meituan.com">三河</a>]
+        </div>
+        <div class="user-entry" style="display: inline-block;">
+            <a class="growth-entry user-importent" href="https://passport.meituan.com/account/unitivelogin?service=www&amp;continue=http%3A%2F%2Fwww.meituan.com%2Faccount%2Fsettoken%3Fcontinue%3Dhttp%253A%252F%252Fbj.meituan.com%252F">立即登录</a>
+            <a class="extra-entry" href="https://passport.meituan.com/account/unitivesignup?service=www&amp;continue=http%3A%2F%2Fwww.meituan.com%2Faccount%2Fsettoken%3Fcontinue%3Dhttp%253A%252F%252Fbj.meituan.com%252F">注册</a>
+        </div>
+        <nav class="header-bar-nav">
+            <ul class="header-nav-first">
+                <li class="has-child">
+                    我的美团
+                </li>
+                <li>
+                    手机APP
+                </li>
+                <li class="has-child">商家中心
+                </li>
+                <li class="has-child web-addr">网站导航
+                    <div class="header-nav-site header-nav-second" style="display:none;">
+                        <dl class="header-jiulv header-nav-third">
+                            <dt>酒店旅游</dt>
+                            <dd>
+                                <a href="http://www.meituan.com/iflight/" target="_blank">国际机票</a>
+                            </dd>
+                            <dd>
+                                <a href="http://www.meituan.com/train/" target="_blank">火车票</a>
+                            </dd>
+                            <dd>
+                                <a href="https://www.zhenguo.com/" target="_blank">榛果民宿</a>
+                            </dd>
+                            <dd>
+                                <a href="http://hotel.meituan.com/beijing/c20036/" target="_blank">经济型酒店</a>
+                            </dd>
+                            <dd>
+                                <a href="http://hotel.meituan.com/beijing/c20037/" target="_blank">主题酒店</a>
+                            </dd>
+                            <dd>
+                                <a href="http://hotel.meituan.com/beijing/c20038/" target="_blank">商务酒店</a>
+                            </dd>
+                            <dd>
+                                <a href="http://hotel.meituan.com/beijing/c20039/" target="_blank">公寓</a>
+                            </dd>
+                            <dd>
+                                <a href="http://hotel.meituan.com/beijing/c20040/" target="_blank">豪华酒店</a>
+                            </dd>
+                            <dd>
+                                <a href="http://hotel.meituan.com/beijing/c20041/" target="_blank">客栈</a>
+                            </dd>
+                            <dd>
+                                <a href="http://hotel.meituan.com/beijing/c20042/" target="_blank">青年旅社</a>
+                            </dd>
+                            <dd>
+                                <a href="http://hotel.meituan.com/beijing/c20043/" target="_blank">度假酒店</a>
+                            </dd>
+                            <dd>
+                                <a href="http://hotel.meituan.com/beijing/c20044/" target="_blank">别墅</a>
+                            </dd>
+                            <dd>
+                                <a href="http://hotel.meituan.com/beijing/c20045/" target="_blank">农家院</a>
+                            </dd>
+                        </dl>
+                        <dl class="header-meishi header-nav-third">
+                            <dt>吃美食</dt>
+                            <dd>
+                                <a href="http://bj.meituan.com/meishi/c20004/" target="_blank">烤鱼</a>
+                            </dd>
+                            <dd>
+                                <a href="http://bj.meituan.com/meishi/c36/" target="_blank">特色小吃</a>
+                            </dd>
+                            <dd>
+                                <a href="http://bj.meituan.com/meishi/c54/" target="_blank">烧烤</a>
+                            </dd>
+                            <dd>
+                                <a href="http://bj.meituan.com/meishi/c40/" target="_blank">自助餐</a>
+                            </dd>
+                            <dd>
+                                <a href="http://bj.meituan.com/meishi/c17/" target="_blank">火锅</a>
+                            </dd>
+                            <dd>
+                                <a href="http://bj.meituan.com/meishi/c393/" target="_blank">代金券</a>
+                            </dd>
+                        </dl>
+                        <dl class="header-movie header-nav-third">
+                            <dt>看电影</dt>
+                            <dd>
+                                <a href="http://maoyan.com/films" target="_blank">热映电影</a>
+                            </dd>
+                            <dd>
+                                <a href="http://maoyan.com/cinemas" target="_blank">热门影院</a>
+                            </dd>
+                            <dd>
+                                <a href="http://maoyan.com/board" target="_blank">热映电影口碑榜</a>
+                            </dd>
+                            <dd>
+                                <a href="http://maoyan.com/board/6" target="_blank">最受期待电影</a>
+                            </dd>
+                            <dd>
+                                <a href="http://maoyan.com/board/1" target="_blank">国内票房榜</a>
+                            </dd>
+                            <dd>
+                                <a href="http://maoyan.com/board/2" target="_blank">北美票房榜</a>
+                            </dd>
+                            <dd>
+                                <a href="http://maoyan.com/board/4" target="_blank">电影排行榜</a>
+                            </dd>
+                        </dl>
+                        <dl class="header-app header-nav-third">
+                            <dt>手机应用</dt>
+                            <dd>
+                                <a href="http://i.meituan.com/mobile/down/meituan" target="_blank">
+                                    <img class="appicon" src="//s0.meituan.net/bs/fe-web-meituan/404d350/img/appicons/meituan.png" title="美团app" alt="美团app">
+                                </a>
+                            </dd>
+                            <dd>
+                                <a href="http://waimai.meituan.com/mobile/download/default" target="_blank">
+                                    <img class="appicon" src="//s1.meituan.net/bs/fe-web-meituan/404d350/img/appicons/waimai.png" title="外卖app" alt="外卖app">
+                                </a>
+                            </dd>
+                            <dd>
+                                <a href="https://www.zhenguo.com/app/" target="_blank">
+                                    <img class="appicon" src="//s0.meituan.net/bs/fe-web-meituan/404d350/img/appicons/zhenguo.png" title="榛果app" alt="榛果app">
+                                </a>
+                            </dd>
+                            <dd>
+                                <a href="http://www.dianping.com/events/m/index.htm" target="_blank">
+                                    <img class="appicon" src="//s1.meituan.net/bs/fe-web-meituan/404d350/img/appicons/dianping.png" title="点评app" alt="点评app">
+                                </a>
+                            </dd>
+                            <dd>
+                                <a href="http://maoyan.com/app" target="_blank">
+                                    <img class="appicon" src="//s1.meituan.net/bs/fe-web-meituan/404d350/img/appicons/maoyan.png" title="猫眼app" alt="猫眼app">
+                                </a>
+                            </dd>
+                        </dl>
+                    </div>
+                </li>
+            </ul>
+        </nav>
     </div>
-    
+
 </div>
