--- a/src/components/head/head.less
+++ b/src/components/head/head.less
@@ -1,152 +1,256 @@
-.head {
-    width: 1000px;
-    color: #999;
+
+.head-main {
+    width: 100%;
     height: 40px;
-    line-height: 40px;
     background: #F8F8F8;
-    margin: 0 auto;
-    .icon-map {
+    .head {
+        width: 1000px;
         color: #999;
-        width: 10px;
-        height: 10px;
-        margin-top: 13px;
-        margin-right: 3px;
-        margin-bottom: 12px;
-        margin-left: 3px;
-        border: solid 1px currentColor;
-        border-radius: 16px 16px 16px 0;
-        -webkit-transform: rotate(-45deg);
-        -moz-transform: ratate(-45deg);
-        transform: rotate(-45deg);
-        display: block;
-        float: left;
-    }
-    .icon-map:after {
-        content: "";
-        width: 3px;
-        height: 3px;
-        border: 1px solid currentcolor;
-        position: absolute;
-        top: 3px;
-        left: 2px;
-        border-radius: 100%;
-    }
-    .current-city {
-        color: #666;
-    }
-    .change-city {
-        background: #F4F4F4;
-        border: 1px solid #E5E5E5;
-        border-radius: 2px;
-        color: #666;
-        margin: 0 4px;
-        padding: 0 2px;
-    }
-    .near-citys {
-        display: inline-block;
-        a {
-            color: #999;
-        }
-    }
-    .user-entry {
-        margin-left: 15px;
-        .user-importent {
-            color: #31BBAC;
-        }
-        a {
-            margin-left: 10px;
-            color: #999999;
-        }
-    }
-    .header-bar .header-bar-nav {
-        float: right;
-        ul {
-            padding: 0;
-            margin: 0;
-            li {
-                list-style: none;
-            }
-        }
-    }
-    .web-addr:hover {
-        color: #31BBAC;
-        background-color: #fff;
-        border-color: #E5E5E5;
-        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .1);
-    }
-    .header-bar .header-nav-first>li {
-        float: left;
-        position: relative;
         height: 40px;
-        padding: 12px 14px;
-        box-sizing: border-box;
-        border-left: 1px solid transparent;
-        border-right: 1px solid transparent;
-        line-height: 16px;
-    }
-    .header-bar .header-nav-site {
-        width: 917px;
-        box-sizing: border-box;
-        border-top-left-radius: 4px;
-        padding: 30px 36px 36px 47px;
-    }
-    .header-bar .header-nav-second {
-        position: absolute;
-        background: #fff;
-        text-align: center;
-        z-index: 1000;
-        right: -1px;
-        top: 95%;
-        box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .1);
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-        box-sizing: content-box;
-        display: none;
-        dt {
-            margin-bottom: 20px;
+        line-height: 40px;       
+        margin: 0 auto;
+        .icon-map {
+            color: #999;
+            width: 10px;
+            height: 10px;
+            margin-top: 13px;
+            margin-right: 3px;
+            margin-bottom: 12px;
+            margin-left: 3px;
+            border: solid 1px currentColor;
+            border-radius: 16px 16px 16px 0;
+            -webkit-transform: rotate(-45deg);
+            -moz-transform: ratate(-45deg);
+            transform: rotate(-45deg);
+            display: block;
+            float: left;
         }
-        dd {
+        .icon-map:after {
+            content: "";
+            width: 3px;
+            height: 3px;
+            border: 1px solid currentcolor;
+            position: absolute;
+            top: 3px;
+            left: 2px;
+            border-radius: 100%;
+        }
+        .current-city {
+            color: #666;
+        }
+        .change-city {
+            background: #F4F4F4;
+            border: 1px solid #E5E5E5;
+            border-radius: 2px;
+            color: #666;
+            margin: 0 4px;
+            padding: 0 2px;
+        }
+        .near-citys {
+            display: inline-block;
             a {
                 color: #999;
-                line-height: 22px;
+            }
+        }
+        .user-entry {
+            margin-left: 15px;
+            .user-importent {
+                color: #31BBAC;
+            }
+            a {
+                margin-left: 10px;
+                color: #999999;
+            }
+        }
+        .header-bar .header-bar-nav {
+            float: right;
+            ul {
+                padding: 0;
+                margin: 0;
+                li {
+                    list-style: none;
+                }
+            }
+        }
+        .web-addr:hover {
+            color: #31BBAC;
+            background-color: #fff;
+            border-color: #E5E5E5;
+            box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .1);
+        }
+        .header-bar .header-nav-first>li {
+            float: left;
+            position: relative;
+            height: 40px;
+            padding: 12px 14px;
+            box-sizing: border-box;
+            border-left: 1px solid transparent;
+            border-right: 1px solid transparent;
+            line-height: 16px;
+        }
+        .header-bar .header-nav-site {
+            width: 917px;
+            box-sizing: border-box;
+            border-top-left-radius: 4px;
+            padding: 30px 36px 36px 47px;
+        }
+        .header-bar .header-nav-second {
+            position: absolute;
+            background: #fff;
+            text-align: center;
+            z-index: 1000;
+            right: -1px;
+            top: 95%;
+            box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .1);
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            box-sizing: content-box;
+            display: none;
+            dt {
+                margin-bottom: 20px;
+            }
+            dd {
+                a {
+                    color: #999;
+                    line-height: 22px;
+                }
+            }
+        }
+        .header-bar .header-nav-third {
+            float: left;
+        }
+        .header-bar .header-jiulv {
+            width: 256px;
+            dd {
+                width: 29%;
+                text-align: center;
+                float: left;
+                margin-left: 10px;
+            }
+        }
+        .header-bar .header-meishi {
+            width: 156px;
+            dd {
+                float: left;
+                margin-left: 34px;
+            }
+        }
+        .header-bar .header-movie {
+            width: 90px;
+            dd {
+                margin-left: 0px;
+            }
+        }
+        .header-bar .header-app {
+            float: right;
+            width: 395px;
+            dd {
+                float: left;
+                margin-left: 10px;
+                img {
+                    width: 60px;
+                    height: 60px;
+                    border: 0;
+                }
             }
         }
     }
-    .header-bar .header-nav-third {
-        float: left;
-    }
-    .header-bar .header-jiulv {
-        width: 256px;
-        dd {
-            width: 29%;
-            text-align: center;
+
+    .header-content {
+        width: 1000px;
+        height: 157px;
+        background-color: white;
+        margin: 0 auto;
+        .header-title-module {
             float: left;
-            margin-left: 10px;
-        }
-    }
-    .header-bar .header-meishi {
-        width: 156px;
-        dd {
-            float: left;
-            margin-left: 34px;
-        }
-    }
-    .header-bar .header-movie {
-        width: 90px;
-        dd {
-            margin-left: 0px;
-        }
-    }
-    .header-bar .header-app {
-        float: right;
-        width: 395px;
-        dd {
-            float: left;
-            margin-left: 10px;
-            img {
-                width: 60px;
-                height: 60px;
+            padding-top: 28px;
+            padding-right: 60px;
+            padding-bottom: 40px;
+            font-size: 16px;
+            min-width: 220px;
+            height: 54px;
+            box-sizing: content-box;
+            .header-title img {
+                width: 126px;
+                height: 46px;
                 border: 0;
+                vertical-align: initial;
+            }
+        }
+        .header-search-module {
+            float: left;
+            padding-top: 28px;
+            position: relative;
+            .header-search-block {
+                width: 422px;
+                height: 40px;
+                border: 1px solid #13D1BE;
+                background: #fff;
+                border-radius: 4px;
+                .header-search-input {
+                    border: none;
+                    line-height: 100%;
+                    box-sizing: border-box;
+                    display: inline-block!important;
+                    padding: 10px;
+                    font-size: 15px;
+                    height: 100%;
+                    background: 0 0;
+                    width: 84%;
+                }
+                .header-search-btn {
+                    outline: 0;
+                    width: 16%;
+                    box-sizing: border-box;
+                    line-height: 100%;
+                    height: 100%;
+                    background: #13D1BE;
+                    border: none;
+                    float: right;
+                    color: #fff;
+                    cursor: pointer;
+                    border-bottom-left-radius: 0;
+                    border-top-left-radius: 0;
+                }
+            }
+            .header-search-hotword {
+                padding-top: 8px;
+                font-size: 12px;
+                width: 422px;
+                overflow: hidden;
+                height: 25px;
+                box-sizing: border-box;
+                text-align: left;
+                padding-left: 12px;
+                a {
+                    color: #999;
+                    margin-right: 10px;
+                    margin-bottom: 3px;
+                    display: inline-block;
+                }
+            }
+        }
+        .header-commitment {
+            width: 186px;
+            float: right;
+            color: #13D1BE;
+            padding-top: 30px;
+            text-align: center;
+            ul {
+                padding: 0;
+                margin: 0;
+                li {
+                    list-style: none
+                }
+            }
+            .commitment-item {
+                width: 33%;
+                float: left;
+                transform: scale(.9);
+            }
+            .commitment-item span {
+                color: #999;
+                font-size: 12px;
             }
         }
     }
