server 添加一个中间件处理静态资源路径

--- a/src/components/head/head.ejs
+++ b/src/components/head/head.ejs
@@ -158,7 +158,7 @@
             <div class="header-search-block">
                 <input class="header-search-input" type="text" placeholder="搜索商家或地点">
                 <button class="header-search-btn">
-                    <span class="header-icon icon-search"></span>
+                    <img src="../../assets/images/4.jpg" alt="" srcset="">
                 </button>
             </div>
             <div class="header-search-hotword">
@@ -171,16 +171,16 @@
         <a class="header-commitment" href="http://www.meituan.com/commitment/" target="_blank">
             <ul>
                 <li class="commitment-item">
-                    <img src="../../assets/images/1.png" alt="" srcset="">
-                    <span>随时退</span>
+                    <img src="/assets/images/1.png" alt="" srcset="">
+                    <div>随时退</div>
                 </li>
                 <li class="commitment-item">
-                    <i class="header-icon icon-tui2"></i>
-                    <span>不满意免单</span>
+                    <img src="/assets/images/3.png" alt="" srcset="">
+                    <div>不满意免单</div>
                 </li>
                 <li class="commitment-item">
-                    <i class="header-icon icon-tui1"></i>
-                    <span>过期退</span>
+                    <img src="/assets/images/3.png" alt="" srcset="">
+                    <div>过期退</div>
                 </li>
             </ul>
         </a>
