--- a/src/components/head/head.less
+++ b/src/components/head/head.less
@@ -204,7 +204,7 @@
                     box-sizing: border-box;
                     line-height: 100%;
                     height: 100%;
-                    background: #13D1BE;
+                    background: #6ad7be;
                     border: none;
                     float: right;
                     color: #fff;
@@ -234,7 +234,7 @@
             width: 186px;
             float: right;
             color: #13D1BE;
-            padding-top: 30px;
+            padding-top: 23px;
             text-align: center;
             ul {
                 padding: 0;
@@ -248,7 +248,7 @@
                 float: left;
                 transform: scale(.9);
             }
-            .commitment-item span {
+            .commitment-item div {
                 color: #999;
                 font-size: 12px;
             }
