修改主页结构

--- a/src/components/head/head.less
+++ b/src/components/head/head.less
@@ -1,8 +1,11 @@
 
 .head-main {
-    width: 100%;
-    height: 40px;
-    background: #F8F8F8;
+    width: 100%;   
+    .head-top {
+        width: 100%;
+        height: 40px;
+        background: #F8F8F8;
+    }
     .head {
         width: 1000px;
         color: #999;
