--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-     <%= include ./src/components/head/head.ejs %>
-      <%= include ./src/components/menu/menu.ejs %>
+    <header class="com-header">
+            <%= include ./src/components/head/head.ejs %>
+    </div>
+    <div class="main">
+            <%= include ./src/components/menu/menu.ejs %>
+    </div>   
+    
 </body>
 </html>
