--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,7 +10,7 @@
     <header class="com-header">
             <%= include ./src/components/head/head.ejs %>
     </div>
-    <div class="main">
+    <div class="main menu-container">
             <%= include ./src/components/menu/menu.ejs %>
     </div>   
     
