增加一个banner模块

--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -3,15 +3,29 @@ body{
     padding: 0;
     font-family: "-apple-system",BlinkMacSystemFont,Roboto,"Helvetica Neue","MIcrosoft YaHei",sans-serif!important;
     font-size: 12px;
+    background-color: #F8F8F8;
 }
 a {
     text-decoration: none;
 }
 .main {
-    width: 1000px;
+    width: 1110px;
     margin: 0 auto;
     overflow: hidden;
 }
 .menu-container {
     margin-top: -45px;
+
+}
+.left-banner {
+    width: 230px;
+    float: left;
+}
+.right-banner {
+    float: left;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+.container {
+    
 }
