--- a/src/components/head/head.less
+++ b/src/components/head/head.less
@@ -1,13 +1,14 @@
 
 .head-main {
-    width: 100%;   
+    width: 100%; 
+    box-shadow: 0 2px 27px 0 rgba(0,0,0,.1);  
     .head-top {
         width: 100%;
         height: 40px;
         background: #F8F8F8;
     }
     .head {
-        width: 1000px;
+        width: 1110px;
         color: #999;
         height: 40px;
         line-height: 40px;       
@@ -92,7 +93,7 @@
             line-height: 16px;
         }
         .header-bar .header-nav-site {
-            width: 917px;
+            width: 1027px;
             box-sizing: border-box;
             border-top-left-radius: 4px;
             padding: 30px 36px 36px 47px;
@@ -159,101 +160,104 @@
         }
     }
 
-    .header-content {
-        width: 1000px;
-        height: 157px;
+    .search-module {
         background-color: white;
-        margin: 0 auto;
-        .header-title-module {
-            float: left;
-            padding-top: 28px;
-            padding-right: 60px;            
-            font-size: 16px;
-            min-width: 220px;
-            height: 54px;
-            box-sizing: content-box;
-            .header-title img {
-                width: 126px;
-                height: 46px;
-                border: 0;
-                vertical-align: initial;
-            }
-        }
-        .header-search-module {
-            float: left;
-            padding-top: 28px;
-            position: relative;
-            .header-search-block {
-                width: 422px;
-                height: 40px;
-                border: 1px solid #13D1BE;
-                background: #fff;
-                border-radius: 4px;
-                .header-search-input {
-                    border: none;
-                    line-height: 100%;
-                    box-sizing: border-box;
-                    display: inline-block!important;
-                    padding: 10px;
-                    font-size: 15px;
-                    height: 100%;
-                    background: 0 0;
-                    width: 84%;
-                }
-                .header-search-btn {
-                    outline: 0;
-                    width: 16%;
-                    box-sizing: border-box;
-                    line-height: 100%;
-                    height: 100%;
-                    background: #6ad7be;
-                    border: none;
-                    float: right;
-                    color: #fff;
-                    cursor: pointer;
-                    border-bottom-left-radius: 0;
-                    border-top-left-radius: 0;
-                }
-            }
-            .header-search-hotword {
-                padding-top: 8px;
-                font-size: 12px;
-                width: 422px;
-                overflow: hidden;
-                height: 25px;
-                box-sizing: border-box;
-                text-align: left;
-                padding-left: 12px;
-                a {
-                    color: #999;
-                    margin-right: 10px;
-                    margin-bottom: 3px;
-                    display: inline-block;
-                }
-            }
-        }
-        .header-commitment {
-            width: 186px;
-            float: right;
-            color: #13D1BE;
-            padding-top: 23px;
-            text-align: center;
-            ul {
-                padding: 0;
-                margin: 0;
-                li {
-                    list-style: none
-                }
-            }
-            .commitment-item {
-                width: 33%;
+        .header-content {
+            width: 1110px;
+            height: 157px;
+            background-color: white;
+            margin: 0 auto;
+            .header-title-module {
                 float: left;
-                transform: scale(.9);
+                padding-top: 28px;
+                padding-right: 60px;            
+                font-size: 16px;
+                min-width: 220px;
+                height: 54px;
+                box-sizing: content-box;
+                .header-title img {
+                    width: 126px;
+                    height: 46px;
+                    border: 0;
+                    vertical-align: initial;
+                }
             }
-            .commitment-item div {
-                color: #999;
-                font-size: 12px;
+            .header-search-module {
+                float: left;
+                padding-top: 28px;
+                position: relative;
+                .header-search-block {
+                    width: 422px;
+                    height: 40px;
+                    border: 1px solid #13D1BE;
+                    background: #fff;
+                    border-radius: 4px;
+                    .header-search-input {
+                        border: none;
+                        line-height: 100%;
+                        box-sizing: border-box;
+                        display: inline-block!important;
+                        padding: 10px;
+                        font-size: 15px;
+                        height: 100%;
+                        background: 0 0;
+                        width: 84%;
+                    }
+                    .header-search-btn {
+                        outline: 0;
+                        width: 16%;
+                        box-sizing: border-box;
+                        line-height: 100%;
+                        height: 100%;
+                        background: #6ad7be;
+                        border: none;
+                        float: right;
+                        color: #fff;
+                        cursor: pointer;
+                        border-bottom-left-radius: 0;
+                        border-top-left-radius: 0;
+                    }
+                }
+                .header-search-hotword {
+                    padding-top: 8px;
+                    font-size: 12px;
+                    width: 422px;
+                    overflow: hidden;
+                    height: 25px;
+                    box-sizing: border-box;
+                    text-align: left;
+                    padding-left: 12px;
+                    a {
+                        color: #999;
+                        margin-right: 10px;
+                        margin-bottom: 3px;
+                        display: inline-block;
+                    }
+                }
+            }
+            .header-commitment {
+                width: 186px;
+                float: right;
+                color: #13D1BE;
+                padding-top: 23px;
+                text-align: center;
+                ul {
+                    padding: 0;
+                    margin: 0;
+                    li {
+                        list-style: none
+                    }
+                }
+                .commitment-item {
+                    width: 33%;
+                    float: left;
+                    transform: scale(.9);
+                }
+                .commitment-item div {
+                    color: #999;
+                    font-size: 12px;
+                }
             }
         }
-    }
+    }   
 }
