--- a/src/components/menu/menu.ejs
+++ b/src/components/menu/menu.ejs
@@ -1,4 +1,4 @@
-<div class="left-banner">
+<div>
     <div class="category-nav-container">
         <div class="category-nav-title-wrapper">
             <span class="category-nav-title">全部分类</span>
