--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <header class="com-header">
+        <div>
             <%= include ./src/components/head/head.ejs %>
+        </div>
+    </header>
+    <div class="container">
+        <div class="main menu-container">
+            <div class="left-banner">
+                <%= include ./src/components/menu/menu.ejs %>
+            </div>
+            <div class="right-banner">
+                <%= include ./src/components/banner/banner.ejs %>
+            </div>
+        </div>
     </div>
-    <div class="main menu-container">
-            <%= include ./src/components/menu/menu.ejs %>
-    </div>   
-    
+
 </body>
+
 </html>
