添加一个有格调模块

--- a/src/components/banner/banner.less
+++ b/src/components/banner/banner.less
@@ -17,6 +17,7 @@
         margin-left: 10px;
         text-align: center;
         border: 1px solid #e5e5e5;
+        background-color: white;
         .head-img-row {
             width: 55px;
             height: 55px;
