--- a/src/index.ejs
+++ b/src/index.ejs
@@ -24,6 +24,9 @@
             </div>
         </div>
     </div>
+    <div class="main pattern-container quality-container">
+            <%= include ./src/components/pattern/pattern.ejs %>
+    </div>
 
 </body>
 
