添加一个新的模块

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -25,9 +25,12 @@
         </div>
     </div>
     <div class="main pattern-container quality-container">
-            <%= include ./src/components/pattern/pattern.ejs %>
+        <%= include ./src/components/pattern/pattern.ejs %>
     </div>
 
+    <div class="main  quality-container">
+        <%= include ./src/components/discount/discount.ejs %>
+    </div>
 </body>
 
 </html>
