ejs 的加载器修改

--- a/src/components/discount/preview.ejs
+++ b/src/components/discount/preview.ejs
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <%= include ./src/components/discount/discount.ejs %>
+    <%= require('./discount.ejs')() %>
 </body>
 </html>
