--- a/src/components/head/preview.ejs
+++ b/src/components/head/preview.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>head</title>
 </head>
-<body>
-     <%= include ./src/components/head/head.ejs %>
+<body>   
+     <%= require('./head.ejs')() %>  
 </body>
 </html>
