--- a/src/components/menu/preview.ejs
+++ b/src/components/menu/preview.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
-     <%= include ./src/components/menu/menu.ejs %>
+<body>     
+     <%= require('./menu.ejs')() %>  
 </body>
 </html>
