--- a/src/components/banner/preview.ejs
+++ b/src/components/banner/preview.ejs
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <%= include ./src/components/banner/banner.ejs %>
+    <%= require('./banner.ejs')() %>
 </body>
 </html>
