增加一个file-loader 模块，url-loader 对 file-laoder的依赖

--- a/src/components/head/head.ejs
+++ b/src/components/head/head.ejs
@@ -154,7 +154,7 @@
                     <div class="header-title-module">
                         <div class="header-title">
                             <a href="//sh.meituan.com">
-                                <img src="//s0.meituan.net/bs/fe-web-meituan/404d350/img/logo.png" alt="美团">
+                                <img src="../../assets/images/logo.png" alt="美团">
                             </a>
                         </div>
                     </div>
