添加生产编译命令

--- a/src/components/banner/banner.ejs
+++ b/src/components/banner/banner.ejs
@@ -2,7 +2,7 @@
     <div class="home-header-links">
         <a href="//waimai.meituan.com" data-bid="b_lalhpjhj" data-lab="{&quot;custom&quot;:{&quot;title&quot;:&quot;美团外卖&quot;}}"
             class="link waimai-link" title="美团外卖" target="_blank">美团外卖</a>
-        <a href="//maoyan.com" data-bid="b_lalhpjhj" data-lab="{&quot;custom&quot;:{&quot;title&quot;:&quot;猫眼电影&quot;}}" class="link maoyan-link"
+        <a href="//114.67.143.209:3002/" data-bid="b_lalhpjhj" data-lab="{&quot;custom&quot;:{&quot;title&quot;:&quot;猫眼电影&quot;}}" class="link maoyan-link"
             title="猫眼电影" query="utm_source=meituanweb" data-query="utm_source=meituanweb" target="_blank">猫眼电影</a>
         <a href="//hotel.meituan.com" data-bid="b_lalhpjhj" data-lab="{&quot;custom&quot;:{&quot;title&quot;:&quot;美团酒店&quot;}}"
             class="link hotel-link" title="美团酒店" target="_blank">美团酒店
