--- a/src/components/moveHeader/preview.ejs
+++ b/src/components/moveHeader/preview.ejs
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-        <%= require('./moveHeader')() %>  
+        <%= require('./moveHeader.ejs')() %>  
 </body>
 </html>
