--- a/src/components/moveHeader/moveHeader.ejs
+++ b/src/components/moveHeader/moveHeader.ejs
@@ -1,3 +1,43 @@
 <div class="move-header">
-    电影头部
+    <div class="header">
+        <div class="header-inner">
+            <a href="/" class="logo" data-act="icon-click"></a>
+            <div class="city-container" data-val="{currentcityid:10 }">
+                <div class="city-selected">
+                    <!-- <div class="city-name">
+                        上海
+                        <span class="caret"></span>
+                    </div> -->
+                </div>
+            </div>
+
+
+            <div class="nav">
+                <ul class="navbar">
+                    <li><a href="/" data-act="home-click">首页</a></li>
+                    <li><a href="/films" data-act="movies-click" class="active">电影</a></li>
+                    <li><a href="/cinemas" data-act="cinemas-click">影院</a></li>
+
+                    <li><a href="/board" data-act="board-click">榜单</a></li>
+                    <li><a href="/news" data-act="hotNews-click">热点</a></li>
+                </ul>
+            </div>
+
+            <div class="user-info">
+                <div class="user-avatar J-login">
+                    <img src="https://p0.meituan.net/movie/7dd82a16316ab32c8359debdb04396ef2897.png">
+                    <span class="caret"></span>
+                    <ul class="user-menu">
+                        <li><a href="javascript:void 0">登录</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <form action="/query" target="_blank" class="search-form" data-actform="search-click">
+                <input name="kw" class="search" type="search" maxlength="32" placeholder="找影视剧、影人、影院" autocomplete="off">
+                <input class="submit" type="submit" value="">
+            </form>
+            
+        </div>
+    </div>
 </div>
