添加一个新的模块

--- a/src/components/moveHeader/moveHeader.ejs
+++ b/src/components/moveHeader/moveHeader.ejs
@@ -4,14 +4,8 @@
             <a href="/" class="logo" data-act="icon-click"></a>
             <div class="city-container" data-val="{currentcityid:10 }">
                 <div class="city-selected">
-                    <!-- <div class="city-name">
-                        上海
-                        <span class="caret"></span>
-                    </div> -->
                 </div>
             </div>
-
-
             <div class="nav">
                 <ul class="navbar">
                     <li><a href="/" data-act="home-click">首页</a></li>
@@ -37,7 +31,27 @@
                 <input name="kw" class="search" type="search" maxlength="32" placeholder="找影视剧、影人、影院" autocomplete="off">
                 <input class="submit" type="submit" value="">
             </form>
-            
+
         </div>
+    </div>
+    <div class="header-placeholder"></div>
+    <div class="subnav">
+        <ul class="navbar">
+            <li>
+                <a data-act="subnav-click" data-val="{subnavClick:7}" data-state-val="{subnavId:7}" class="active" href="javascript:void(0);">热映口碑榜</a>
+            </li>
+            <li>
+                <a data-act="subnav-click" data-val="{subnavClick:6}" href="/board/6">最受期待榜</a>
+            </li>
+            <li>
+                <a data-act="subnav-click" data-val="{subnavClick:1}" href="/board/1">国内票房榜</a>
+            </li>
+            <li>
+                <a data-act="subnav-click" data-val="{subnavClick:2}" href="/board/2">北美票房榜</a>
+            </li>
+            <li>
+                <a data-act="subnav-click" data-val="{subnavClick:4}" href="/board/4">TOP100榜</a>
+            </li>
+        </ul>
     </div>
 </div>
