--- a/src/pages/global.ejs
+++ b/src/pages/global.ejs
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-        
+    <div class="global-mian">
+        <div>
+            <%= require('../../src/components/moveHeader/moveHeader.ejs')() %>
+        </div>
+        <div>
+           <%= require('../../src/components/moveContent/moveContent.ejs')() %>
+        </div>
+    </div>
 </body>
+
 </html>
